--- a/backend/TicTacToe/appsettings.Development.json
+++ b/backend/TicTacToe/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Issuer": "https://localhost:8080",
+    "Audience": "https://localhost:8080",
+    "Key": "YourSuperSecretKeyWithAtLeast32Characters"
+  },
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Username=postgres;Password=postgres;Database=tic_tac_toe_database"
+  },
+  "RatingDatabaseSettings": {
+    "ConnectionString": "mongodb://admin:password@localhost:27017",
+    "DatabaseName": "default",
+    "CollectionName": "Strings"
   }
 }
