added rabbit config

--- a/backend/TicTacToe/appsettings.Development.json
+++ b/backend/TicTacToe/appsettings.Development.json
@@ -17,5 +17,11 @@
     "ConnectionString": "mongodb://admin:password@localhost:27017",
     "DatabaseName": "default",
     "CollectionName": "Strings"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "VHost": "/",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
