--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,36 @@
 ﻿services:
-  tictactoe:
-    image: tictactoe
-    build:
-      context: .
-      dockerfile: backend/TicTacToe/Dockerfile
+  # tictactoe:
+  #   image: tictactoe
+  #   build:
+  #     context: .
+  #     dockerfile: backend/TicTacToe/Dockerfile
+  #   depends_on:
+  #     - postgres
+  #     - mongo
+  #     - rabbitmq
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
     depends_on:
       - postgres
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://admin:password@mongo:27017/
+    ports:
+      - "8081:8081"
+    depends_on:
       - mongo
-      - rabbitmq
 
   postgres:
     image: postgres:latest
@@ -49,3 +72,4 @@ volumes:
   postgres_data:
   mongo_data:
   rabbitmq_data:
+  pgadmin_data:
