--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,20 @@
 ﻿services:
+  frontend:
+    build:
+      context: ./frontend/tictactoe
+      dockerfile: Dockerfile
+    ports:
+      - "80:80" 
+    environment:
+      VITE_API_HOST: "http://tictactoe:5000/api/v1"
+    depends_on:
+      - tictactoe
+
   tictactoe:
     image: tictactoe
     build:
-      context: .
-      dockerfile: backend/TicTacToe/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     depends_on:
       - postgres
       - mongo
