--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@
     ports:
       - "80:80" 
     environment:
-      VITE_API_HOST: "http://tictactoe:5000/api/v1"
+      VITE_API_HOST: "http://tictactoe:5188/api/v1"
     depends_on:
       - tictactoe
 
   tictactoe:
     image: tictactoe
+    ports:
+      - "5188:5188" 
     build:
       context: ./backend
       dockerfile: Dockerfile
